# array_min

./: .gitignore  Cargo.toml
benches/: bench.rs
scripts/: plot_all.sh  run_bench.sh  visualize_bench.py  visualize_vector_min.py
src/: avx512_min.rs  lib.rs  main.rs
