[package]
name = "array_min"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"

[dev-dependencies]
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true

[features]
trace_avx_search = []

[[bench]]
name = "bench"
harness = false

[build]
rustflags = ["-C", "target-feature=+avx512f,+avx512bw"]